--- a/src/main/resources/templates/admin/projects.html
+++ b/src/main/resources/templates/admin/projects.html
@@ -110,6 +110,8 @@
                 <div class="btn-group">
                   <a th:href="@{/admin/projects/{id}/edit(id=${project.id})}" class="btn-small">Rediger</a>
                   <a th:href="@{/admin/projects/{id}/assign(id=${project.id})}" class="btn-small info">Tildel</a>
+                  <a th:href="@{/admin/projects/{id}/budget(id=${project.id})}" class="btn-small"
+                    style="background-color: #00b894; color: white;">Budget</a>
                   <form th:action="@{/admin/projects/{id}/delete(id=${project.id})}" method="post">
                     <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}"
                       th:value="${_csrf.token}" />
